tree-sitter-sql/test/corpus/functions.txt
==================
Aggregate functions
==================

select
    count(*),
    count(distinct id),
    sum(1),
    string_agg(col, ','),
    current_date()
from table

---

(select_statement
 (select_wrapper
  (select_body
   (column_list
    (select_expr (primary_expression (agg_function
      (function_name)
      (function_args (select_all)))))
    (select_expr (primary_expression (agg_function
      (function_name)
      (distinct)
      (function_args
        (primary_expression (qualified_identifier (quoted_identifier (identifier))))))))
    (select_expr (primary_expression (agg_function
      (function_name)
      (function_args (primary_expression (lit_integer))))))
    (select_expr (primary_expression (agg_function
      (function_name)
      (function_args
       (primary_expression (qualified_identifier (quoted_identifier (identifier))))
       (primary_expression (lit_string (string_literal)))))))
    (select_expr (primary_expression (agg_function
      (function_name))))
   )
   (dataset_definition
     (table_reference (qualified_identifier (quoted_identifier (identifier)))))
  )
 )
)



==================
Window functions - basic
==================

select
    count(*) over (),
    count(distinct user_id) over (partition by id),
    sum(1) over (partition by id, id + 1 order by name is not null, name) as value
from table

---

(select_statement
 (select_wrapper
  (select_body
   (column_list
    (select_expr (primary_expression (window_function
      (function_name)
      (function_args (select_all))
      (window_specification)
    )))
    (select_expr (primary_expression (window_function
      (function_name)
      (distinct)
      (function_args
        (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
      (window_specification 
        (window_partition_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
      )
    )))
    (select_expr (primary_expression (window_function
      (function_name)
      (function_args (primary_expression (lit_integer)))
      (window_specification 
        (window_partition_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier))))
          (primary_expression (binary_operator
            (primary_expression (qualified_identifier (quoted_identifier (identifier))))
            (primary_expression (lit_integer))))
        )
        (window_order_clause
          (comparison_operator
            (primary_expression (qualified_identifier (quoted_identifier (identifier))))
            (primary_expression (lit_null))
          )
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
      )
     ))
     (column_alias (quoted_identifier (identifier)))
    )
   )
   (dataset_definition
     (table_reference (qualified_identifier (quoted_identifier (identifier)))))
  )
 )
)



==================
Window functions - framed
==================

select
    count(*) over (
        partition by id
        order by event_time
        rows between unbounded preceding and current row
    ),
    count(*) over (
        partition by id
        order by event_time
        rows between 1 preceding and unbounded following
    ),
    count(*) over (
        partition by id
        order by event_time
        rows between unbounded preceding and 2 following
    ),
    count(*) over (
        partition by id
        order by event_time
        rows between unbounded preceding and unbounded following
    )
from table

---

(select_statement
 (select_wrapper
  (select_body
   (column_list
    (select_expr (primary_expression (window_function
      (function_name)
      (function_args (select_all))
      (window_specification 
        (window_partition_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
        (window_order_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
        (window_frame_start (window_unbounded_preceding))
        (window_frame_end (window_current_row))
    ))))
    (select_expr (primary_expression (window_function
      (function_name)
      (function_args (select_all))
      (window_specification 
        (window_partition_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
        (window_order_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
        (window_frame_start (window_integer_offset (lit_integer)))
        (window_frame_end (window_unbounded_following))
    ))))
    (select_expr (primary_expression (window_function
      (function_name)
      (function_args (select_all))
      (window_specification 
        (window_partition_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
        (window_order_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
        (window_frame_start (window_unbounded_preceding))
        (window_frame_end (window_integer_offset (lit_integer)))
    ))))
    (select_expr (primary_expression (window_function
      (function_name)
      (function_args (select_all))
      (window_specification 
        (window_partition_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
        (window_order_clause
          (primary_expression (qualified_identifier (quoted_identifier (identifier)))))
        (window_frame_start (window_unbounded_preceding))
        (window_frame_end (window_unbounded_following))
    ))))
   )
   (dataset_definition
     (table_reference (qualified_identifier (quoted_identifier (identifier)))))
  )
 )
)
