tree-sitter-sql/test/corpus/joins.txt
==================
Simple join (on)
==================

select *
from table
join other on other.id = table.id

---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference (qualified_identifier (quoted_identifier (identifier))))
    (join_clause (qualified_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
      (join_clause_on
        (comparison_operator
          (primary_expression (qualified_identifier
            (quoted_identifier (identifier))
            (quoted_identifier (identifier))
          ))
          (primary_expression (qualified_identifier
            (quoted_identifier (identifier))
            (quoted_identifier (identifier))
          ))
        )
      )
    ))
   )
  )
 )
)

==================
Simple join (using)
==================

select *
from table
join other using (id, name)

---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference (qualified_identifier (quoted_identifier (identifier))))
    (join_clause (qualified_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
      (join_clause_using
        (quoted_identifier (identifier))
        (quoted_identifier (identifier))
      )
    ))
   )
  )
 )
)


==================
Join (inner)
==================

select *
from table
inner join other on 1=1
---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference (qualified_identifier (quoted_identifier (identifier))))
    (join_clause (qualified_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
      (join_clause_on
        (comparison_operator 
          (primary_expression (lit_integer))
          (primary_expression (lit_integer))
        )
      )
    ))
   )
  )
 )
)

==================
Join (left)
==================

select *
from table
left join other on 1=1
left outer join other on 1=1
---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference (qualified_identifier (quoted_identifier (identifier))))
    (join_clause (qualified_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
      (join_clause_on
        (comparison_operator 
          (primary_expression (lit_integer))
          (primary_expression (lit_integer))
        )
      )
    ))
    (join_clause (qualified_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
      (join_clause_on
        (comparison_operator 
          (primary_expression (lit_integer))
          (primary_expression (lit_integer))
        )
      )
    ))
   )
  )
 )
)

==================
Join (left outer)
==================

select *
from table
left outer join other on 1=1
---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference (qualified_identifier (quoted_identifier (identifier))))
    (join_clause (qualified_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
      (join_clause_on
        (comparison_operator 
          (primary_expression (lit_integer))
          (primary_expression (lit_integer))
        )
      )
    ))
   )
  )
 )
)

==================
Join (right)
==================

select *
from table
right join other on 1=1
right outer join other on 1=1
---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference (qualified_identifier (quoted_identifier (identifier))))
    (join_clause (qualified_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
      (join_clause_on
        (comparison_operator 
          (primary_expression (lit_integer))
          (primary_expression (lit_integer))
        )
      )
    ))
    (join_clause (qualified_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
      (join_clause_on
        (comparison_operator 
          (primary_expression (lit_integer))
          (primary_expression (lit_integer))
        )
      )
    ))
   )
  )
 )
)

===========
Join (cross)
==================

select *
from table, other2
cross join other
---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference (qualified_identifier (quoted_identifier (identifier))))
    (join_clause (cross_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
    ))
    (join_clause (cross_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
    ))
   )
  )
 )
)

===========
Join (full)
==================

select *
from table
full outer join other on 1=1

---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference (qualified_identifier (quoted_identifier (identifier))))
    (join_clause (qualified_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))
      (join_clause_on
        (comparison_operator 
          (primary_expression (lit_integer))
          (primary_expression (lit_integer))
        )
      )
    ))
   )
  )
 )
)

===========
Join (natural)
==================

select *
from table
natural join other
natural inner join other
natural left join other
natural left outer join other
natural right join other
natural right outer join other
---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference (qualified_identifier (quoted_identifier (identifier))))
    (join_clause (natural_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))))
    (join_clause (natural_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))))
    (join_clause (natural_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))))
    (join_clause (natural_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))))
    (join_clause (natural_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))))
    (join_clause (natural_join
      (join_target (table_reference (qualified_identifier (quoted_identifier (identifier)))))))
   )
  )
 )
)
