tree-sitter-sql/test/corpus/subqueries.txt
==================
Select from subquery
==================

select * from (
    select 1 as id
)

---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_all))
   (dataset_definition
    (table_reference
     (subquery
      (select_statement (select_wrapper (select_body
         (column_list
           (select_expr
            (primary_expression (lit_integer))
            (column_alias (quoted_identifier (identifier)))))
      ))))
   )) 
  )
 )
)


==================
Select subquery as column
==================

select
    (select count(*) from table) as aliased

from table

---

(select_statement
 (select_wrapper
  (select_body
   (column_list (select_expr (primary_expression
    (subquery
     (select_statement (select_wrapper (select_body
       (column_list
         (select_expr
           (primary_expression (agg_function
             (function_name)
             (function_args (select_all)))))
        )
       (dataset_definition (table_reference
         (qualified_identifier (quoted_identifier (identifier)))))
      )))))
     (column_alias (quoted_identifier (identifier)))))
   (dataset_definition (table_reference
     (qualified_identifier (quoted_identifier (identifier)))))
   )
  )
)
